--- a/index.html
+++ b/index.html
@@ -524,8 +524,8 @@ menuToggle.addEventListener('click', () => {
   }
 
   // Call the function for header and footer
-  loadElement('header-placeholder', 'header.html');
-  loadElement('footer-placeholder', 'footer.html');
+  loadElement('header-placeholder', 'includer/header.html');
+  loadElement('footer-placeholder', 'includer/footer.html');
 </script>
 </body>
 
