--- a/company/careers.html
+++ b/company/careers.html
@@ -14,63 +14,7 @@
 </head>
 <body>
   <div class="relative overflow">
-    <div class="topbar">
-      <div class="">
-        <div class="header">
-          <h1><a href="../index.html"><img src="../images/logo.png" alt="XoraiNow" class="logo"></a></h1>
-<div class="hamburger" id="menuToggle">
-    <i class="ri-menu-line"></i>
-  </div>
-          <nav id="mainNav">
-            <ul class="menu flex align-items-center">
-              <li class="dropdown">
-                <a href="../industries/index.html">Industries <i class="ri-arrow-down-s-line"></i></a>
-                <ul class="submenu">
-                  <li><a href="../industries/education.html">Education</a></li>
-                  <li><a href="../industries/healthcare.html">Healthcare</a></li>
-                  <li><a href="../industries/retail.html">Retail</a></li>
-                  <li><a href="../industries/financial-services.html">Financial Services</a></li>
-                  <li><a href="../industries/energy.html">Energy</a></li>
-                </ul>
-              </li>
-              <li class="dropdown">
-                <a href="../solutions/index.html">Solutions <i class="ri-arrow-down-s-line"></i></a>
-                <ul class="submenu">
-                  <li><a href="../solutions/it.html">IT Service Management (ITSM)</a></li>
-                  <li><a href="../solutions/crm.html">Customer Relationship Management (CRM)</a></li>
-                  <li><a href="../solutions/hr.html">HR Service Delivery (HRSD)</a></li>
-                  <li><a href="../solutions/security-risk.html">Security & Risk (GRC)</a></li>
-                  <li><a href="../solutions/finance.html">Finance & Operations</a></li>
-                  <li><a href="../solutions/supply-chain.html">Supply Chain Management</a></li>
-                </ul>
-              </li>
-              <li class="dropdown"><a href="../services/index.html">Services <i class="ri-arrow-down-s-line"></i></a>
-                <ul class="submenu">
-                  <li><a href="../services/implementation.html">Implementation</a></li>
-                  <li><a href="../services/consulting.html">Consulting</a></li>
-                  <li><a href="../services/staffing.html">Staffing</a></li>
-                  <li><a href="../services/training.html">Training</a></li>
-                </ul>
-              </li>
-              <li class="dropdown"><a href="../resources/index.html">Resources <i class="ri-arrow-down-s-line"></i></a>
-                <ul class="submenu">
-                  <li><a href="../resources/blogs.html">Blogs</a></li>
-                  <li><a href="../resources/documents.html">Documents</a></li>
-                </ul>
-              </li>
-              <li class="dropdown"><a href="index.html">Company <i class="ri-arrow-down-s-line"></i></a>
-                <ul class="submenu">
-                  <li><a href="about.html">About Us</a></li>
-                  <li><a href="events.html">Events</a></li>
-                  <li><a href="careers.html">Careers</a></li>
-                </ul>
-              </li>
-            </ul>
-          </nav>
-          <a href="../contact.html" class="btn btn-green">Let's talk <i class="ri-smartphone-line"></i></a>
-        </div>
-      </div>
-    </div>
+<div id="header-placeholder"></div>
 <div id="content-wrapper" class="relative overflow">
     <div class="herobanner">
       <h4 class="fade-section">Join Our Team | Build the Agentic Enterprise
@@ -154,49 +98,7 @@
     </div>
 
      </div>
-    <footer class="text-center footer">
-      <div>
-        <div class="container">
-          <div>
-            <h4>Ready to Join Our Team?</h4>
-            <a href="../contact.html" class="btn btn-green mt-3">Let's Talk <i class="ri-arrow-right-line"></i></a>
-          </div>
- <img src="../images/logo.png" class="frlogo">
-          <div class="row ftmenu">
-            <div class="col-md-2">
-              &nbsp;
-            </div>
-            <div class="col-md-1"> &nbsp;</div>
-            <div class="col-md-3">
-              <h5>Company</h5>
-              <ul>
-                <li><a href="about.html"><i class="ri-arrow-right-line"></i> About Us</a></li>
-                <li><a href="events.html"><i class="ri-arrow-right-line"></i> Events</a></li>
-                <li><a href="careers.html"><i class="ri-arrow-right-line"></i> Careers</a></li>
-              </ul>
-            </div>
-            <div class="col-md-3">
-              <h5>Services</h5>
-              <ul>
-                <li><a href="../services/implementation.html"><i class="ri-arrow-right-line"></i> Implementation</a></li>
-                <li><a href="../services/consulting.html"><i class="ri-arrow-right-line"></i> Consulting</a></li>
-                <li><a href="../services/staffing.html"><i class="ri-arrow-right-line"></i> Staffing</a></li>
-                <li><a href="../services/training.html"><i class="ri-arrow-right-line"></i> Training</a></li>
-              </ul>
-            </div>
-            <div class="col-md-3">
-              <h5>Contact</h5>
-              <p> <strong>hello@xorainow.com</strong> </p>
-              <p>
-                <strong>Global Headquarters:</strong><br>Guwahati, India<br><br>
-                <strong>Delivery Centers:</strong><br>Hyderabad | Noida<br><br>
-                <strong>Client Offices:</strong><br>Dubai, UAE | United States
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </footer>
+   <div id="footer-placeholder"></div>
     <div class="trail"></div>
   
   <div class="topbg"></div>
@@ -269,6 +171,20 @@ menuToggle.addEventListener('click', () => {
         }
     });
 });</script>
+<script>
+  // Function to load HTML into a placeholder
+  function loadElement(id, file) {
+    fetch(file)
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById(id).innerHTML = data;
+      });
+  }
+
+  // Call the function for header and footer
+  loadElement('header-placeholder', 'https://xorai-html.vercel.app/includes/header.html');
+  loadElement('footer-placeholder', 'https://xorai-html.vercel.app/includes/footer.html');
+</script>
 </body>
 </html>
 
