--- a/company/about.html
+++ b/company/about.html
@@ -83,11 +83,11 @@
         <div class="grow mt50">
           <h4>Where We <span>Work</span></h4>
           <ul class="list-unstyled text-start d-inline-block">
-            <li> <img src="../images/tick.png" alt=""> <strong>Global Headquarters:</strong> Guwahati, India
+            <li> <img src="../images/tick.png" alt=""> <strong>Headquarters:</strong> Noida, India
             </li>
-            <li> <img src="../images/tick.png" alt=""> <strong>Delivery Centers:</strong> Hyderabad, India | Noida, India
+            <li> <img src="../images/tick.png" alt=""> <strong>Delivery Centers:</strong> Hyderabad, India | Guwahati, India
             </li>
-            <li><img src="../images/tick.png" alt=""> <strong>Client Offices:</strong> Dubai, UAE | United States
+            <li><img src="../images/tick.png" alt=""> <strong>Client Offices:</strong> Dubai, Riyadh ,UAE | New York, San Diego, United States
             </li>
           </ul>
           <div style="margin-top: 50px;">
