--- a/contact.html
+++ b/contact.html
@@ -144,7 +144,7 @@
                   Hyderabad, India<br>
                   Guwahati, India</p>
 
-                <p style="font-size: 24px; margin-bottom: 20px;"><strong>Client Offices:</strong><br>
+                <p style="font-size: 24px; margin-bottom: 20px;"><strong>Global Locations:</strong><br>
                   Dubai, Riyadh ,UAE<br>
                   New York, San Diego, United States</p>
 
