--- a/company/about.html
+++ b/company/about.html
@@ -87,7 +87,7 @@
             </li>
             <li> <img src="../images/tick.png" alt=""> <strong>Delivery Centers:</strong> Hyderabad, India | Guwahati, India
             </li>
-            <li><img src="../images/tick.png" alt=""> <strong>Client Offices:</strong> Dubai, Riyadh ,UAE | New York, San Diego, United States
+            <li><img src="../images/tick.png" alt=""> <strong>Global Locations:</strong> Dubai, Riyadh ,UAE | New York, San Diego, United States
             </li>
           </ul>
           <div style="margin-top: 50px;">
