--- a/index.html
+++ b/index.html
@@ -403,6 +403,136 @@
 
 
  
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/owl.carousel.min.js"></script>
+
+<script>
+  /**
+   * 1. NAVIGATION & DYNAMIC LOADING
+   */
+  function loadElement(id, file) {
+    fetch(file)
+      .then(response => response.text())
+      .then(data => {
+        const target = document.getElementById(id);
+        if (target) {
+          target.innerHTML = data;
+          // Re-initialize menu listeners AFTER the HTML is injected
+          initMenuLogic();
+        }
+      })
+      .catch(err => console.error('Error loading HTML:', err));
+  }
+
+   // Call the function for header and footer
+  loadElement('header-placeholder', 'https://xorai-html.vercel.app/includes/header.html');
+  loadElement('footer-placeholder', 'https://xorai-html.vercel.app/includes/footer.html');
+
+
+  function initMenuLogic() {
+    const menuToggle = document.getElementById('menuToggle');
+    const mainNav = document.getElementById('mainNav');
+    const contentWrapper = document.getElementById('content-wrapper');
+    const body = document.body;
+
+    // The "if(menuToggle)" check prevents the "Cannot read properties of null" error
+    if (menuToggle && mainNav) {
+      menuToggle.addEventListener('click', () => {
+        mainNav.classList.toggle('active');
+        contentWrapper?.classList.toggle('blur-overlay-active');
+        body.classList.toggle('no-scroll');
+
+        const menuIcon = menuToggle.querySelector('i');
+        if (menuIcon) {
+          if (mainNav.classList.contains('active')) {
+            menuIcon.classList.replace('ri-menu-line', 'ri-close-line');
+          } else {
+            menuIcon.classList.replace('ri-close-line', 'ri-menu-line');
+          }
+        }
+      });
+    }
+
+    // Initialize Mobile Dropdowns
+    document.querySelectorAll('.dropdown > a').forEach(dropdownToggle => {
+      dropdownToggle.addEventListener('click', function (e) {
+        if (window.innerWidth <= 992) {
+          e.preventDefault();
+          const parent = this.parentElement;
+          document.querySelectorAll('.dropdown').forEach(item => {
+            if (item !== parent) item.classList.remove('open');
+          });
+          parent.classList.toggle('open');
+        }
+      });
+    });
+  }
+
+  /**
+   * 2. PAGE EFFECTS (Scroll, Owl, Mouse)
+   */
+  document.addEventListener('DOMContentLoaded', function () {
+    // Initialize Owl Carousel
+    const $owl = $('.owl-carousel');
+    if ($owl.length) {
+      $owl.owlCarousel({
+        loop: true,
+        margin: 10,
+        nav: false,
+        dots: true,
+        items: 1,
+      });
+    }
+
+    // Intersection Observer for sections
+    const sections = document.querySelectorAll('.fade-section');
+    const blurObserver = new IntersectionObserver((entries) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add('blur-active', 'in-view');
+        } else {
+          entry.target.classList.remove('blur-active');
+        }
+      });
+    }, {
+      threshold: 0.3,
+      rootMargin: '-50px 0px -50px 0px'
+    });
+
+    sections.forEach(section => blurObserver.observe(section));
+
+    // Scroll Blur Effect
+    window.addEventListener('scroll', () => {
+      sections.forEach(section => {
+        const rect = section.getBoundingClientRect();
+        if (rect.top < window.innerHeight && rect.bottom > 0) {
+          const progress = Math.min(1, Math.max(0, (window.innerHeight - rect.top) / window.innerHeight));
+          const blurAmount = progress * 8;
+          section.style.setProperty('--blur-amount', `${blurAmount}px`);
+        }
+      });
+    });
+
+    // Mouse Trail Effect
+    document.addEventListener('mousemove', (e) => {
+      createTrail(e.clientX, e.clientY);
+    });
+
+    // Run menu logic once in case HTML is already on page (not fetched)
+    initMenuLogic();
+  });
+
+  function createTrail(x, y) {
+    const trail = document.createElement('div');
+    trail.className = 'trail';
+    trail.style.left = x + 'px';
+    trail.style.top = y + 'px';
+    document.body.appendChild(trail);
+    setTimeout(() => trail.remove(), 800);
+  }
+</script>
+ 
 </body>
 
 </html>
