--- a/contact.html
+++ b/contact.html
@@ -241,8 +241,8 @@
   }
 
   // Call the function for header and footer
-  loadElement('header-placeholder', 'https://xorai-html.vercel.app/includes/header.html');
-  loadElement('footer-placeholder', 'https://xorai-html.vercel.app/includes/footer.html');
+  loadElement('header-placeholder', 'https://xorainow.com/includes/header.html');
+  loadElement('footer-placeholder', 'https://xorainow.com/includes/footer.html');
 </script>
 </body>
 
