--- a/index.html
+++ b/index.html
@@ -426,8 +426,8 @@
   }
 
   // Initial Load
-  loadElement('header-placeholder', 'https://xorainow.com/includes/header.html');
-  loadElement('footer-placeholder', 'https://xorainow.com/includes/footer.html');
+  loadElement('header-placeholder', '/includes/header.html');
+  loadElement('footer-placeholder', '/includes/footer.html');
 
   /**
    * 2. CORE MENU LOGIC
