--- a/company/careers.html
+++ b/company/careers.html
@@ -106,84 +106,124 @@
 </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/owl.carousel.min.js"></script>
-  <script>
-    document.addEventListener('DOMContentLoaded', function () {
-      const sections = document.querySelectorAll('.fade-section');
-      const blurObserver = new IntersectionObserver((entries) => {
-        entries.forEach(entry => {
-          if (entry.isIntersecting) {
-            entry.target.classList.add('blur-active', 'in-view');
-          } else {
-            entry.target.classList.remove('blur-active');
-          }
-        });
-      }, {
-        threshold: 0.3,
-        rootMargin: '-50px 0px -50px 0px'
-      });
-      sections.forEach(section => blurObserver.observe(section));
-    });
-  </script>
-  <script>
-    document.addEventListener('mousemove', (e) => {
-      createTrail(e.clientX, e.clientY);
-    });
-    function createTrail(x, y) {
-      const trail = document.createElement('div');
-      trail.className = 'trail';
-      trail.style.left = x + 'px';
-      trail.style.top = y + 'px';
-      document.body.appendChild(trail);
-      setTimeout(() => {
-        trail.remove();
-      }, 800);
-    }
-  </script>
-  <script>
-  const menuToggle = document.getElementById('menuToggle');
-const mainNav = document.getElementById('mainNav');
-const contentWrapper = document.getElementById('content-wrapper');
-const body = document.body;
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/owl.carousel.min.js"></script>
 
-menuToggle.addEventListener('click', () => {
-    mainNav.classList.toggle('active');
-    contentWrapper.classList.toggle('blur-overlay-active');
-    body.classList.toggle('no-scroll');
-    const menuIcon = menuToggle.querySelector('i');
-    if (mainNav.classList.contains('active')) {
-        menuIcon.classList.replace('ri-menu-line', 'ri-close-line');
-    } else {
-        menuIcon.classList.replace('ri-close-line', 'ri-menu-line');
-    }
-});
-  </script>
-  <script>document.querySelectorAll('.dropdown > a').forEach(dropdownToggle => {
-    dropdownToggle.addEventListener('click', function (e) {
-        if (window.innerWidth <= 992) {
-            e.preventDefault();
-            const parent = this.parentElement;
-            document.querySelectorAll('.dropdown').forEach(item => {
-                if (item !== parent) item.classList.remove('open');
-            });
-            parent.classList.toggle('open');
-        }
-    });
-});</script>
 <script>
-  // Function to load HTML into a placeholder
+  /**
+   * 1. THE DYNAMIC LOADER
+   */
   function loadElement(id, file) {
     fetch(file)
       .then(response => response.text())
       .then(data => {
-        document.getElementById(id).innerHTML = data;
-      });
+        const target = document.getElementById(id);
+        if (target) {
+          target.innerHTML = data;
+          // Trigger menu setup once HTML is injected
+          initMenuLogic();
+        }
+      })
+      .catch(err => console.error('Error loading HTML:', err));
   }
 
-  // Call the function for header and footer
-  loadElement('header-placeholder', 'https://xorainow.com/includes/header.html');
-  loadElement('footer-placeholder', 'https://xorainow.com/includes/footer.html');
+  // Initial Load
+  loadElement('header-placeholder', '/includes/header.html');
+  loadElement('footer-placeholder', '/includes/footer.html');
+
+  /**
+   * 2. CORE MENU LOGIC
+   */
+  function initMenuLogic() {
+    const menuToggle = document.getElementById('menuToggle');
+    const mainNav = document.getElementById('mainNav');
+    const contentWrapper = document.getElementById('content-wrapper');
+    const body = document.body;
+
+    // Safety: If elements aren't in the DOM yet, stop here. 
+    // The fetch callback will trigger this again once they arrive.
+    if (!menuToggle || !mainNav) return;
+
+    // Remove existing listener to prevent "double-toggle" bugs
+    menuToggle.replaceWith(menuToggle.cloneNode(true));
+    const newToggle = document.getElementById('menuToggle');
+
+    newToggle.addEventListener('click', (e) => {
+      e.preventDefault();
+      mainNav.classList.toggle('active');
+      contentWrapper?.classList.toggle('blur-overlay-active');
+      body.classList.toggle('no-scroll');
+
+      const menuIcon = newToggle.querySelector('i');
+      if (menuIcon) {
+        if (mainNav.classList.contains('active')) {
+          menuIcon.className = 'ri-close-line'; // Direct class assignment is safer
+        } else {
+          menuIcon.className = 'ri-menu-line';
+        }
+      }
+    });
+
+    // Mobile Dropdowns
+    document.querySelectorAll('.dropdown > a').forEach(dropdownToggle => {
+      dropdownToggle.onclick = function(e) {
+        if (window.innerWidth <= 992) {
+          e.preventDefault();
+          const parent = this.parentElement;
+          document.querySelectorAll('.dropdown').forEach(item => {
+            if (item !== parent) item.classList.remove('open');
+          });
+          parent.classList.toggle('open');
+        }
+      };
+    });
+  }
+
+  /**
+   * 3. UI EFFECTS
+   */
+  document.addEventListener('DOMContentLoaded', function () {
+    // Owl Carousel
+    if ($('.owl-carousel').length) {
+      $('.owl-carousel').owlCarousel({
+        loop: true, margin: 10, nav: false, dots: true, items: 1
+      });
+    }
+
+    // Scroll & Fade Animations
+    const sections = document.querySelectorAll('.fade-section');
+    const blurObserver = new IntersectionObserver((entries) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add('blur-active', 'in-view');
+        } else {
+          entry.target.classList.remove('blur-active');
+        }
+      });
+    }, { threshold: 0.1 });
+
+    sections.forEach(section => blurObserver.observe(section));
+
+    window.addEventListener('scroll', () => {
+      sections.forEach(section => {
+        const rect = section.getBoundingClientRect();
+        if (rect.top < window.innerHeight && rect.bottom > 0) {
+          const progress = Math.min(1, Math.max(0, (window.innerHeight - rect.top) / window.innerHeight));
+          section.style.setProperty('--blur-amount', `${progress * 8}px`);
+        }
+      });
+    });
+  });
+
+  // Mouse Trail
+  document.addEventListener('mousemove', (e) => {
+    const trail = document.createElement('div');
+    trail.className = 'trail';
+    trail.style.left = e.clientX + 'px';
+    trail.style.top = e.clientY + 'px';
+    document.body.appendChild(trail);
+    setTimeout(() => trail.remove(), 800);
+  });
 </script>
 </body>
 </html>
